[package]
name = "gil_beats"
version = "0.1.0"
authors = ["Gil Desmarais <git@desmarais.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
